--- a/hello-pwa-master/index.html
+++ b/hello-pwa-master/index.html
@@ -17,6 +17,7 @@
 </head>
 <body class="fullscreen">
   <button class="add-button">Add to home screen</button>
+  <button onclick="notifyMe()">Pokaż hello world!</button>
   <div class="container">
     <h1 class="title">Hello World!</h1>
   </div>
