--- a/hello-pwa-master/index.html
+++ b/hello-pwa-master/index.html
@@ -18,6 +18,7 @@
 <body class="fullscreen">
   <button class="add-button">Add to home screen</button>
   <button onclick="notifyMe()">Pokaż hello world!</button>
+  <input type="file" id="zdjecie" name="zdjecie" accept="image/*">
   <div class="container">
     <h1 class="title">Hello World!</h1>
   </div>
