--- a/hello-pwa-master/index.html
+++ b/hello-pwa-master/index.html
@@ -8,11 +8,7 @@
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
   <link rel="apple-touch-icon" href="images/hello-icon-152.png">
   <link rel="stylesheet" type="text/css" href="css/semantic.css">
-<script
-  src="https://code.jquery.com/jquery-3.1.1.min.js"
-  integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
-  crossorigin="anonymous"></script>
-<script src="js/semantic.js"></script>
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="theme-color" content="white"/>
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -21,11 +17,16 @@
   <meta name="msapplication-TileImage" content="images/hello-icon-144.png">
   <meta name="msapplication-TileColor" content="#FFFFFF">
 </head>
+  <script
+  src="https://code.jquery.com/jquery-3.1.1.min.js"
+  integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+  crossorigin="anonymous"></script>
+
 <body class="fullscreen">
   <button class="add-button">Add to home screen</button>
   <button onclick="notifyMe()">Pokaż hello world!</button>
-  <i class="upload icon"></i>
-  <input type="file" id="zdjecie" name="zdjecie" accept="image/*">
+  <i class="upload icon" type="file" id="zdjecie" name="zdjecie" accept="image/*"></i>
+  
   <div class="container">
     <h1 class="title">Hello World!</h1>
   </div>
