--- a/hello-pwa-master/index.html
+++ b/hello-pwa-master/index.html
@@ -21,8 +21,17 @@
 <body class="fullscreen">
   <button class="add-button">Add to home screen</button>
   <button onclick="notifyMe()">Pokaż hello world!</button>
-  <i class="upload icon" type="file" id="zdjecie" name="zdjecie" accept="image/*"></i>
   
+  <p><input type="file"  class="upload icon" accept="image/*" name="image" id="file"  onchange="loadFile(event)" style="display: none;"></p>
+<p><label for="file" style="cursor: pointer;">Upload Image</label></p>
+<p><img id="output" width="200" /></p>
+
+<script>
+var loadFile = function(event) {
+	var image = document.getElementById('output');
+	image.src = URL.createObjectURL(event.target.files[0]);
+};
+</script>
   <div class="container">
     <h1 class="title">Hello World!</h1>
   </div>
