--- a/hello-pwa-master/index.html
+++ b/hello-pwa-master/index.html
@@ -31,9 +31,18 @@
   <button class="add-button">Add to home screen</button>
   <button onclick="notifyMe()">Pokaż hello world!</button>
   
-  <p><input type="file"  class="upload icon" accept="image/*" name="image" id="file"  onchange="loadFile(event)" style="display: none;"></p>
-<p><label for="file" style="cursor: pointer;">Upload Image</label></p>
-<p><img id="output" width="200" /></p>
+
+	<div class="ui grid">
+  <div class="eight wide column">
+		  <p><input type="file"  class="upload icon" accept="image/*" name="image" id="file"  onchange="loadFile(event)" ></p>
+	          <p><label for="file" style="cursor: pointer;">Upload Image</label></p>
+		</div>
+  <div class="eight wide column">
+	           <p><img id="output" width="200" /></p>
+		</div>
+ 
+</div>
+
 
 <script>
 var loadFile = function(event) {
