--- a/hello-pwa-master/index.html
+++ b/hello-pwa-master/index.html
@@ -29,6 +29,8 @@
  
 <body class="fullscreen">
   <button class="add-button">Add to home screen</button>
+	<div class="ui internally celled grid">
+  <div class="row">
   <button onclick="notifyMe()">Pokaż hello world!</button>
   
 <p><input type="file"  class="upload icon" accept="image/*" name="image" id="file"  onchange="loadFile(event)" ></p>
@@ -42,7 +44,9 @@
 		</div>
  
 </div>
-
+</div>
+ 
+</div>
 
 <script>
 var loadFile = function(event) {
