--- a/hello-pwa-master/index.html
+++ b/hello-pwa-master/index.html
@@ -31,7 +31,7 @@
   <button class="add-button">Add to home screen</button>
 	<div class="ui internally celled grid">
   <div class="row">
-  <button onclick="notifyMe()">Pokaż hello world!</button>
+  <button class="ui-btn ui-btn-b" onclick="notifyMe()">Pokaż hello world!</button>
   
 <p><input type="file"  class="upload icon" accept="image/*" name="image" id="file"  onchange="loadFile(event)" ></p>
 	<div class="ui grid">
