--- a/hello-pwa-master/index.html
+++ b/hello-pwa-master/index.html
@@ -25,6 +25,14 @@
   async
   src="//cdn.jsdelivr.net/npm/semantic-ui@${props.versions.sui}/dist/semantic.min.js"
 ></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-mobile/1.4.1/jquery.mobile.min.js" integrity="sha512-wSacGPS/KRyVB67O4xD+Eh1OX4/dq4juZj9DKTokRt81BzLbfsSMtNgR9Pu8FLr4kLbk5oNr9Hq+5PeWLCX8mA==" crossorigin="anonymous"></script>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-mobile/1.4.1/jquery.mobile.external-png.min.css" integrity="sha512-hcATu6pUSbN6Hx18y+gG2EuoPZdOlkhwHBASPpJoJN6njAZQV/TbG18yh8TndMNwmhNrOtFvf4n1g+OZS8ryOA==" crossorigin="anonymous" />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-mobile/1.4.1/jquery.mobile.icons.min.css" integrity="sha512-ogi0eqmAaUTtkHC+rpweX6s3L2eX0AXy1LMdCHw0/WwfzooCBQxE1qQ5Fqh0gXO0SlpMMDqkXePh4UR/v0WSPA==" crossorigin="anonymous" />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-mobile/1.4.1/jquery.mobile.inline-png.min.css" integrity="sha512-LBifnZfg3T5QNgdLRmTta90iB/uDdbvpABTwsWmJIXk4xv67uVvnX92g8vAvxX0SCFIH41UdbqmVXjyO7ttDBA==" crossorigin="anonymous" />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-mobile/1.4.1/jquery.mobile.inline-svg.min.css" integrity="sha512-k7P00xbHuXM7fIVf1EC6pY8MJKqcRyXLQSAs5VmMfXIIyK/YzFzD7U625g1EY2tXjtj2SEPDEvJf8y/a9+0DeA==" crossorigin="anonymous" />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-mobile/1.4.1/jquery.mobile.min.css" integrity="sha512-o3x4nST+KCWWUxaA1oneL8MOaOz8EEG+r6IUASMYlYd+ehohuxEr6Tv3XxZNkwHZgn3rw4r2D8N868O099HgyQ==" crossorigin="anonymous" />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-mobile/1.4.1/jquery.mobile.structure.min.css" integrity="sha512-yuUClEqeXvQSJ9GvHoGrJVZxn58+pjtsbTnLCvzOfYsdIIgBsiJmYCAP5w3aVPjpEaW8LKffgrQWKQ+a2tl89A==" crossorigin="anonymous" />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-mobile/1.4.1/jquery.mobile.theme.min.css" integrity="sha512-tay3Ps5Nhkyvi6WbGM3TvI4ckikam4TiE7y+o9qwT7ZzGW+saGiuUEXcyTK1D9AhVKuek7uMJmvuSLEGossQ4g==" crossorigin="anonymous" />
 </head>
  
 <body class="fullscreen">
