--- a/hello-pwa-master/index.html
+++ b/hello-pwa-master/index.html
@@ -44,7 +44,7 @@
 
 	<div class="ui grid">
   <div class="eight wide column">
-		  <p><input type="file"  class="upload icon" accept="image/*" name="image" id="file"  onchange="loadFile(event)" ></p>
+		  <p><input type="file"  class="upload icon" accept="image/*" name="image" id="file"  onchange="loadFile(event)" style="display: none;"></p>
 	          <p><label for="file" style="cursor: pointer;">Upload Image</label></p>
 		</div>
   <div class="eight wide column">
