--- a/hello-pwa-master/index.html
+++ b/hello-pwa-master/index.html
@@ -45,7 +45,7 @@
 	<div class="ui grid">
   <div class="eight wide column">
 		  <p><input type="file"  class="upload icon" accept="image/*" name="image" id="file"  onchange="loadFile(event)" style="display: none;"></p>
-	          <p><label for="file" style="cursor: pointer;">Upload Image</label></p>
+	          <p><label for="file" style="cursor: pointer;" class="upload icon">Upload Image</label></p>
 		</div>
   <div class="eight wide column">
 	           <p><img id="output" width="200" /></p>
