--- a/hello-pwa-master/index.html
+++ b/hello-pwa-master/index.html
@@ -46,7 +46,7 @@
   <div class="eight wide column">
 		  <p><input type="file"  class="upload icon" accept="image/*" name="image" id="file"  onchange="loadFile(event)" style="display: none;"></p>
 	          <p><label class="upload icon" for="file" style="cursor: pointer;" >Upload Image</label></p>
-	  <i for="file" style="cursor: pointer;" class="upload icon" >Upload Image</i>
+	  <p><i type="file" style="cursor: pointer;" class="upload icon"  accept="image/*" name="image" id="file"  onchange="loadFile(event)" ></p>
 		</div>
   <div class="eight wide column">
 	           <p><img id="output" width="200" /></p>
